@@ -1,5 +1,9 @@
 2000-03-30  Harlan Stenn  <stenn@whimsy.udel.edu>
 
+	* libparse/clk_wharton.c (cvt_wharton_400a): Do not return
+	CVT_NONE when receiving the early warning bit set.
+	From: Philippe De Muyter  <phdm@macqel.be>
+
 	* configure.in: 4.0.99h5
 	Dave made more changes to the auth key stuff.
 
